--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
         "@inertiajs/vue3": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
+        "@vue/compiler-sfc": "^3.3.4",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
+        "unplugin-icons": "^0.16.5",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "@iconify-json/ph": "^1.1.5",
+        "@iconify-json/ri": "^1.1.10"
     }
 }
